llvm/src/snapshots/transmute_llvm__tests__if_else_value.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i1 @f(i64 %"n#sym19#") {
entry:
  %"m#local#sym20#" = alloca i64, align 8
  %"n#local#sym19#" = alloca i64, align 8
  store i64 %"n#sym19#", ptr %"n#local#sym19#", align 4
  %"n#local#sym19#1" = load i64, ptr %"n#local#sym19#", align 4
  %"eq#" = icmp eq i64 %"n#local#sym19#1", 42
  br i1 %"eq#", label %true_branch, label %false_branch

true_branch:                                      ; preds = %entry
  ret i1 true

false_branch:                                     ; preds = %entry
  %"n#local#sym19#2" = load i64, ptr %"n#local#sym19#", align 4
  %"sub#" = sub i64 %"n#local#sym19#2", 1
  br label %end_if

end_if:                                           ; preds = %false_branch
  store i64 %"sub#", ptr %"m#local#sym20#", align 4
  %"m#local#sym20#3" = load i64, ptr %"m#local#sym20#", align 4
  %"eq#4" = icmp eq i64 %"m#local#sym20#3", 42
  ret i1 %"eq#4"
}
